--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
             <input type="password" placeholder="Password">
             <br>
             <button > <a href="">LOGIN</a> </button>
+            <button > <a href="">LOGIN</a> </button>
         </form>
     </div>
     <form>
